--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 					<div class="col-md-3 col-md-offset-1">
 						<figure class="animate-box">
-							<img src="images/fa.jpg" alt="#" class="img-responsive">
+							<img src="#" alt="Photo of Father Ronald" class="img-responsive">
 						</figure>
 					</div>
 
@@ -88,7 +88,7 @@
           </div>
           <div class="col-md-6">
             <figure class="animate-box">
-              <img src="images/img_1.jpg" alt="#" class="img-responsive">
+              <img src="#" alt="A monastic image" class="img-responsive">
             </figure>
           </div>
         </div>
@@ -103,7 +103,7 @@
         <div class="row row-bottom-padded-lg">
           <div class="col-md-6">
             <figure class="animate-box">
-              <img src="images/img_3.jpg" alt="#" class="img-responsive">
+              <img src="#" alt="Image about a religious life" class="img-responsive">
             </figure>
           </div>
           <div class="col-md-6">
@@ -120,7 +120,7 @@
 			<div class="container">
 				<div class="col-md-6 col-md-push-6">
 					<figure class="crc-feature-image animate-box">
-						<img class="house" src="images/img0.jpg" alt="images/img0.jpg">
+						<img class="house" src="#" alt="Image of the Formation House">
 					</figure>
 				</div>
 				<div class="col-md-6 col-md-pull-6">
@@ -148,7 +148,7 @@
       <div class="container">
         <div class="col-md-6 col-md-pull-4 col-lg-6 col-lg-pull-2">
           <figure class="crc-feature-image animate-box">
-            <img class="room" src="images/img_2.jpg" alt="#">
+            <img class="room" src="#" alt="Image inside the Formation House">
           </figure>
         </div>
         <div class="col-md-6">
@@ -193,8 +193,8 @@
 				<div class="row">
 
 					<div class="col-md-4 col-sm-12 col-xxs-12 animate-box">
-						<a href="images/weare.jpg" class="crc-project-item image-popup">
-							<img src="images/weare.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 1" class="img-responsive">
 							<div class="crc-text">
 								<h2>Who We Are</h2>
 								<p>We are the essential part of the order and an efficacious
@@ -205,8 +205,8 @@
 					</div>
 
 					<div class="col-md-4 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/img_2.jpg" class="crc-project-item image-popup">
-							<img src="images/img_2.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 2" class="img-responsive">
 							<div class="crc-text">
 								<h2>Eucharist and Divine Office</h2>
 								<p>The solemn celebration of the Liturgy is the heart
@@ -216,8 +216,8 @@
 					</div>
 
 					<div class="col-md-4 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/img_3.jpg" class="crc-project-item image-popup">
-							<img src="images/img_3.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 3" class="img-responsive">
 							<div class="crc-text">
 								<h2>Private Prayer and Adoration</h2>
 								<p>In silence and in stillness, we earnestly seek that face of the
@@ -228,8 +228,8 @@
 					</div>
 
 					<div class="col-md-4 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/study1.jpg" class="crc-project-item image-popup">
-							<img src="images/study1.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 4" class="img-responsive">
 							<div class="crc-text">
 								<h2>Study</h2>
 								<p>The light and source of our study is GOD.
@@ -241,7 +241,7 @@
 
 					<div class="col-md-4 col-sm-6 col-xxs-12 animate-box">
 						<a href="images/img_6.jpg" class="crc-project-item image-popup">
-							<img src="images/img_6.jpg" alt="Image" class="img-responsive">
+							<img src="#" alt="Image 5" class="img-responsive">
 							<div class="crc-text">
 								<h2>Recreation</h2>
 								<p>Mutual understanding and sisterly communion are fostered by various forms.</p>
@@ -250,8 +250,8 @@
 					</div>
 
 					<div class="col-md-4 col-sm-12 col-xxs-12 animate-box">
-						<a href="images/img_5.jpg" class="crc-project-item image-popup">
-							<img src="images/img_5.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 6" class="img-responsive">
 							<div class="crc-text">
 								<h2>Work</h2>
 								<p>Rejoicing that we can fulfill the design of the creator and be associated with the Redeemer, we readily give ourselves.</p>
@@ -260,8 +260,8 @@
 					</div>
 
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/img_4.jpg" class="crc-project-item image-popup">
-							<img src="images/img_4.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 7" class="img-responsive">
 							<div class="crc-text">
 								<h2>Sacrifice</h2>
 								<p>We bear the death of Jesus in body and soul, that we may merit the glory of the resurrection for ourselves and for others.</p>
@@ -270,8 +270,8 @@
 					</div>
 
 					<div class=" col-lg-6 col-md-6 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/img_1.jpg" class="crc-project-item image-popup">
-							<img src="images/img_1.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image 8" class="img-responsive">
 							<div class="crc-text">
 								<h2>Community Life</h2>
 								<p>Our community is founded in the one Spirit. It is in Him we receive the Word with one faith, contemplate Him with one heart and praise Him with one voice. In Him we are made one body, share one Bread and hold all things in common.</p>
@@ -292,7 +292,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<figure class="animate-box">
-							<img src="images/study.jpg" alt="#" class="img-responsive">
+							<img src="#" alt="Image of studying nuns" class="img-responsive">
 						</figure>
 					</div>
 					<div class="col-md-6">
@@ -357,8 +357,8 @@
         <div class="row">
 
 					<div class="col-md-4 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/aspirant.jpg" class="crc-project-item image-popup">
-							<img src="images/aspirant.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image of Aspirants" class="img-responsive">
 							<div class="crc-text">
 								<h2>ASPIRANT (SIX MONTHS)</h2>
 								<p>Is the time becoming increasing acquainted
@@ -369,8 +369,8 @@
 					</div>
 
 					<div class="col-md-4 col-sm-6 col-xxs-12 animate-box">
-						<a href="images/postulant.jpg" class="crc-project-item image-popup">
-							<img src="images/postulant.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image of postulants" class="img-responsive">
 							<div class="crc-text">
 								<h2>POSTULANT (ONE YEAR)</h2>
 								<p>Must submit all pertinent papers;
@@ -383,8 +383,8 @@
 					</div>
 
 					<div class="col-md-4 col-sm-12 col-xxs-12 animate-box">
-						<a href="images/novice.jpg" class="crc-project-item image-popup">
-							<img src="images/novice.jpg" alt="Image" class="img-responsive">
+						<a href="#" class="crc-project-item image-popup">
+							<img src="#" alt="Image of novitiates" class="img-responsive">
 							<div class="crc-text">
 								<h2>NOVITIATE (TWO YEARS)</h2>
 								<p>Includes integrative experiences of prayer, study,
